# MosaicoPDF

./: README.md  pyproject.toml
ADR/: ADR.txt
sandbox/: test_clip.py
src/mosaicopdf/: __main__.py
src/mosaicopdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mosaicopdf/config/: papers.py
src/mosaicopdf/core/: mosaic_builder.py  pdf_exporter.py  pdf_reader.py  pdf_renderer.py
src/mosaicopdf/models/: __init__.py  mosaic.py  mosaic_settings.py  paper.py  printer_profile.py  tile.py
src/mosaicopdf/utils/: console.py  output_filename.py
tests/: test_paper.py
